test/fail/actor-reference.mo
// actor references

ignore (actor "IC:bfozs-kwa73-7nadi" : ());  // must be actor type
ignore (actor (45) : actor {});  // argument must be text type
